--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,9 @@
 #   go-tests = true
 #   unused-packages = true
 
+[metadata.heroku]
+  root-package = "github.com/kwangchihn/go-echo-vue"
+  go-version = "1.11.2"
 
 [[constraint]]
   branch = "master"
